--- a/exercises/Read_Counting.Rmd
+++ b/exercises/Read_Counting.Rmd
@@ -101,19 +101,21 @@ Note that version 2 of gff is identical to the gtf format.
 library(Rsubread)
 
 # Set path of the reference annotation gzipped gtf file
-reference_annotation = "/Users/clstacy/Desktop/reference_genome/Saccharomyces_cerevisiae.R64-1-1.110.gtf.gz"
+reference_annotation = "~/Desktop/reference_genome/Saccharomyces_cerevisiae.R64-1-1.110.gtf.gz"
 ```
 
 We can see the arguments available with the align function from the Rsubread package
 ```{r argsCount}
 args(featureCounts)
 ```
-
+The Phred offset determines the encoding for the base-calling quality string in the
+FASTQ file. For the Illumina 1.8 format onwards, this encoding is set at +33.
+However, older formats may use a +64 encoding. Users should ensure that the
+correct encoding is specified during alignment. If unsure, one can examine the first
+several quality strings in the FASTQ file. A good rule of thumb is to check whether
+lower-case letters are present (+64 encoding) or absent (+33).
 
 ```{r alignReads}
-# set where we would like the file to be output
-##NOTE: I don't think we need this. but if it doesn't put them in the same folder where the trimmed fastq files, then maybe setwd in this chunk.
-# setwd("~/Desktop")
 
 # This command counts the number of each feature per fastq file, generating an output we can use later.
 fc <- featureCounts(bam.files,
@@ -164,6 +166,24 @@ We will need to use this object in our next class. We can use the R function `sa
 saveRDS(object = fc, file = "~/Desktop/yeast_fc_output.Rds")
 ```
 
+
+## RSubread also allows for some basic QC checking:
+
+We can have a look at the quality scores associated with each base that has been called by the sequencing machine using the qualityScores function in Rsubread.
+
+Let’s extract quality scores for 50 reads for the fastq file .
+
+```{r check-qualityScores}
+# Extract quality scores
+qs <- qualityScores(filename="~/Desktop/filtered/filtered_phenol_heat_rep4_rfastp_trimmed_rfastp_R1.fastq.gz",
+                    nreads=50)
+
+head(qs)
+```
+We are randomly sampling 50 reads from the file and seeing the quality scores. A quality score of 30 corresponds to a 1 in 1000 chance of an incorrect base call. (A quality score of 10 is a 1 in 10 chance of an incorrect base call.) To look at the overall distribution of quality scores across the sampled reads, we can look at a boxplot
+```{r visualizeq-qs}
+boxplot(qs)
+```
 
 # Activity
    
